# NexSandglass-Agent-DedicatedMemory

./: .aider.chat.history.md  .aider.input.history  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  V2.9-V2.10.5-全链路复盘.md  __init__.py  benchmark.py  benchmark_extended.py  benchmark_full.py  check.py  compare_offset_fix.py  config.json  decision_particles.py  decision_particles_sample.txt  demo.py  demo_jb.py  discipline.py  emotion_l3.py  emotion_vocab.py  export-chatlog.py  export_decision_tree.py  feature_map.html  heartbeat.py  hermes_to_sandglass.py  hermes_tts_bridge.py  install.bat  install.sh  l0_buffer.py  l3_persona.py  l3_persona_verify.py  l3_search_core.py  l3_tasks.py  locomo_architecture.html  locomo_benchmark.py  locomo_clean.py  locomo_zh.py  mcp_server.py  memory_provider.py  (+42 more)
demo/: demo_clean.py
nexsandglass/: __init__.py  plugin.yaml
nexsandglass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plugins/: sanitize.py
sandglass_core/: V2.9.2→V2.10.38_全改动复盘报告.md  agent_bootstrap.py  backfill_empty_tags.py  decision_particles.py  discipline.py  heartbeat.py  install.py  l3_search_core.py  memory_provider.py  metrics.py  offset_l3.py  offset_signals.py  persona_l3.py  pulse.py  remote_install.py  sandglass_paths.py  sandglass_sqlite.py  sandglass_think.py  sandglass_vault.py  search_router.py  shadow_sand.py  test_smoke.py  weavethread.py
