[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexsandglass"
version = "2.10.39"
description = "沙漏记忆系统 — 纯本地零依赖L3思考层"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
nexsandglass = "sandglass_vault:main"

[project.urls]
Homepage = "https://github.com/lovevin1314-tech/NexSandglass-Agent-DedicatedMemory"
